--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "miraheze/pdfembed",
+	"name": "wikiforge/pdfembed",
 	"description": "",
 	"license": "LGPL-3.0-only",
 	"require-dev": {
